--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Real-time Coordinate Tracker {{ name }}</h1>
+        <h1>La esquizofrenia está pegando fuerte{{ name }}</h1>
 
         <!-- Navigation between views -->
         <div class="view-navigation">
