Update frontend heading to include 'Joa2' prefix for user name

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Joa {{ name }}</h1>
+        <h1>Joa2 {{ name }}</h1>
 
         <!-- Navigation between views -->
         <div class="view-navigation">
