Brief description of the changes you made

--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -159,7 +159,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Las locas de la luna {{ name }}</h1>
+        <h1>{{ name }}</h1>
 
         <!-- Navigation between views -->
         <div class="view-navigation">
